qt-prod/zq-app/ingress/www-xxx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www-xxx-ingress
  namespace: zq-app
  annotations:
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-rpm: "400"
spec:
  rules:
  - host: www.zuquu.com
    http:
      paths:
      - backend:
          serviceName: xxx-pc
          servicePort: 80
        path: / 
      - backend:
          serviceName: xxx-hzp
          servicePort: 80
        path: /Application/uploadFile
